{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 15,
  "lineage": "e4ba67a1-75dd-fd62-dbf9-a495a0530bb1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cs_lab_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f8b8f874036055b1",
            "arn": "arn:aws:ec2:us-east-1:210929744970:instance/i-00d873260d2d2d8c9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "security_lab_instance_profile",
            "id": "i-00d873260d2d2d8c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "security_lab_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f61697366a396f3e",
            "private_dns": "ip-192-168-1-120.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.120",
            "public_dns": "ec2-50-19-67-251.compute-1.amazonaws.com",
            "public_ip": "50.19.67.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-086aaaef9d1248cdc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0096ab82f379c3973",
            "tags": {
              "Name": "Lab_Instance_for_S3"
            },
            "tags_all": {
              "Name": "Lab_Instance_for_S3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f535426096a132d5"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.cs_ec2_instance_profile",
            "aws_iam_role.cs_ec2_role",
            "aws_key_pair.cs_lab_key",
            "aws_subnet.cs_lab_subnet",
            "aws_vpc.cs_lab_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cs_lab_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210929744970:internet-gateway/igw-055cfa6080cabe376",
            "id": "igw-055cfa6080cabe376",
            "owner_id": "210929744970",
            "vpc_id": "vpc-0bbb52e257ec82d75"
          },
          "dependencies": [
            "aws_vpc.cs_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cs_lab_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210929744970:route-table/rtb-0564b71b3e951dc47",
            "id": "rtb-0564b71b3e951dc47",
            "owner_id": "210929744970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055cfa6080cabe376",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbb52e257ec82d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cs_lab_igw",
            "aws_vpc.cs_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "security_lab_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9eca5d262dcdb2c",
            "route_table_id": "rtb-0564b71b3e951dc47",
            "subnet_id": "subnet-0096ab82f379c3973"
          },
          "dependencies": [
            "aws_internet_gateway.cs_lab_igw",
            "aws_route_table.cs_lab_route_table",
            "aws_subnet.cs_lab_subnet",
            "aws_vpc.cs_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cs_lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210929744970:security-group/sg-0bd6179b1c04a4ad2",
            "description": "Allow SSH from anywhere",
            "egress": [],
            "id": "sg-0bd6179b1c04a4ad2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security_lab_sg",
            "name_prefix": "",
            "owner_id": "210929744970",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbb52e257ec82d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cs_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cs_lab_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210929744970:subnet/subnet-0096ab82f379c3973",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0096ab82f379c3973",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "210929744970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bbb52e257ec82d75"
          },
          "dependencies": [
            "aws_vpc.cs_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cs_lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210929744970:vpc/vpc-0bbb52e257ec82d75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00ee1813b1a9e90d2",
            "default_route_table_id": "rtb-0f7a09523e22ec2ee",
            "default_security_group_id": "sg-0f535426096a132d5",
            "dhcp_options_id": "dopt-09fc5d29ac4a2e738",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbb52e257ec82d75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7a09523e22ec2ee",
            "owner_id": "210929744970",
            "tags": {
              "Name": "Test Lab VPC"
            },
            "tags_all": {
              "Name": "Test Lab VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210929744970:vpc-endpoint/vpce-0a29550ecb92be8b4",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-0a29550ecb92be8b4",
            "owner_id": "210929744970",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0bbb52e257ec82d75"
          },
          "dependencies": [
            "aws_vpc.cs_lab_vpc"
          ]
        }
      ]
    }
  ]
}